# ocrd_pagetopdf

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  ocrd-tool.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker.yml  pypi.yml
ocrd_pagetopdf/: alto_processor.py  cli.py  multipagepdf.py  ocrd-tool.json  page_processor.py  processor.py
tests/: conftest.py  test_pagetopdf.py
